@@ -1,3 +1,8 @@
+2002-04-03  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* src/udp-server.c (udp_server_standalone): 
+	save the set and restore it when select() return.
+
 2002-04-02  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
 
 	* src/log-common.c (format_syslog_header): 
